feat: 增强本地身份治理、计划模式和通道 Agent 能力
- 新增本地用户、会话、API Token、设备配对、通道用户绑定等身份治理能力
- 增加角色策略、权限合并、Rate Limit、Token/User/Device/Channel 维度的访问控制
- 引入 Plan 计划模式，支持计划生成、修订、确认、取消、执行和差异摘要
- 增强 SubAgent 编排，支持单任务、批量、并行派发以及从计划项派生子任务
- 增加 worker 隔离执行能力，高危命令和后台进程支持独立 JVM、超时、输出上限和并发限制
- 扩展飞书、钉钉、DDIO 通道能力，补充媒体下载、附件 metadata、富文本渲染和通道用户绑定
- 增强 Admin Console 和 Desktop App，补充认证、设备、通道、计划、审计、自动化等管理入口
- 完善 SQLite 持久化，新增本地用户、会话、Token、设备、通道绑定和 Plan 存储
- 优化 ReAct/Todo 执行链路、工具审批、运行时策略注入和任务恢复相关逻辑
- 完善 MCP、Skill、Toolkit 配置和脚本执行安全边界
- 更新 README、CONFIGURATION 和 roadmap 文档，补充新增功能说明