@@ -1,11 +1,14 @@
 package com.github.clawagent.server.service;
 
+import com.github.clawagent.server.support.TestIdentityStores;
 import com.github.clawagent.server.dto.ApiTokenCreateRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
-import java.nio.file.Files;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.time.Instant;
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,9 +21,8 @@ class ApiTokenServiceTest {
     Path tempDir;
 
     @Test
-    void createPersistsOnlyHashAndRevokeDisablesToken() throws Exception {
-        Path storePath = tempDir.resolve("api-tokens.json");
-        ApiTokenService service = new ApiTokenService(storePath);
+    void createPersistsTokenForConsoleCopyAndDeleteRemovesToken() throws Exception {
+        ApiTokenService service = TestIdentityStores.apiTokenService(tempDir);
 
         var created = service.create(new ApiTokenCreateRequest("CI Token", Map.of("source", "test")));
         String plainToken = created.token();
@@ -30,25 +32,68 @@ class ApiTokenServiceTest {
         assertTrue(service.verify(plainToken));
         assertTrue(service.verifyAndTouch(plainToken, "GET", "/api/v1/tasks"));
 
-        // 列表视图只暴露 token 前缀和状态，不返回明文或哈希。
+        // 本地管理台需要二次复制 Token；列表返回明文，但仍不返回 tokenHash。
         var tokens = service.list();
         assertEquals(1, tokens.size());
         assertEquals("CI Token", tokens.get(0).name());
         assertEquals("active", tokens.get(0).status());
+        assertEquals(plainToken, tokens.get(0).token());
         assertNotNull(tokens.get(0).lastUsedAt());
         assertEquals(1L, tokens.get(0).usageCount());
         assertEquals("GET", tokens.get(0).lastUsedMethod());
         assertEquals("/api/v1/tasks", tokens.get(0).lastUsedPath());
         assertTrue(plainToken.startsWith(tokens.get(0).tokenPrefix()));
 
-        // 落盘文件只能保存哈希，避免刷新页面或读取配置时恢复完整 token。
-        String rawStore = Files.readString(storePath);
-        assertFalse(rawStore.contains(plainToken));
-        assertTrue(rawStore.contains("tokenHash"));
+        // 本地 SQLite 保存明文用于管理台复制；真正鉴权仍依赖 hash，不把 hash 暴露到列表视图。
+        String rawStore = new String(java.nio.file.Files.readAllBytes(TestIdentityStores.databasePath(tempDir)), StandardCharsets.ISO_8859_1);
+        assertTrue(rawStore.contains(plainToken));
+        assertTrue(rawStore.contains("token_hash"));
 
-        var revoked = service.revoke(tokens.get(0).id());
-        assertEquals("revoked", revoked.status());
-        assertEquals(1L, revoked.usageCount());
+        var deleted = service.delete(tokens.get(0).id());
+        assertEquals("active", deleted.status());
+        assertEquals(1L, deleted.usageCount());
+        assertEquals(0, service.list().size());
         assertFalse(service.verify(plainToken));
+    }
+
+    @Test
+    void tokenCanCarryOwnerScopeAndPermissionPolicy() {
+        ApiTokenService service = TestIdentityStores.apiTokenService(tempDir);
+
+        var created = service.create(new ApiTokenCreateRequest(
+                "Desktop Token",
+                "user-1",
+                "alice",
+                "custom",
+                List.of("builtin.execute.command", "builtin.execute.command", "builtin.filesystem.read_text_file"),
+                List.of("tasks:write", "tasks:read"),
+                Instant.now().plusSeconds(3600),
+                Map.of("source", "desktop")));
+
+        var view = created.tokenInfo();
+
+        assertEquals("user-1", view.ownerUserId());
+        assertEquals("alice", view.ownerUsername());
+        assertEquals("custom", view.permissionMode());
+        assertEquals(List.of("builtin.execute.command", "builtin.filesystem.read_text_file"), view.approvedToolIds());
+        assertEquals(List.of("tasks:write", "tasks:read"), view.scopes());
+        assertTrue(service.authenticateAndTouch(created.token(), "POST", "/api/v1/tasks").isPresent());
+    }
+
+    @Test
+    void expiredTokenCannotAuthenticate() {
+        ApiTokenService service = TestIdentityStores.apiTokenService(tempDir);
+        var created = service.create(new ApiTokenCreateRequest(
+                "Expired",
+                "",
+                "",
+                "",
+                List.of(),
+                List.of("tasks:write"),
+                Instant.now().minusSeconds(1),
+                Map.of()));
+
+        assertFalse(service.verify(created.token()));
+        assertTrue(service.authenticateAndTouch(created.token(), "GET", "/api/v1/tasks").isEmpty());
     }
 }
